# neo4j-uc-integration

./: .gitignore  ASSISTANCE.md  CLAUDE.md  DATABRICKS_ASSITANCE.md  FEDERATED_AGENTS.md  GUIDE_NEO4J_UC.md  META.md  METADATA.md  METADATA_PLAN.md  METADATA_SYNC_REPORT.md  NEO4J_UC_INTEGRATION_REPORT.md  NOT_SURE.md  Neo4J UC Integration Test Results.md  README.md  TEST.md  UC_INTEGRATION_STATUS.md  UC_SECURITY.md  antora-playbook.yml  architecture-overview.excalidraw  neo4j_databricks_jdbc_federation_proposal.md  neo4j_databricks_sql_translation.html  package-lock.json  package.json
deploy-lakebase/: .env.sample  (+4 more)
pyspark-translation-example/: README.md  env.sample  main.py  pyproject.toml
pyspark-translation-example/neo4j_sql_tests/: __init__.py  config.py  jdbc_metadata.py  output.py  runner.py  spark.py  tests_aggregates.py  tests_jdbc_metadata.py  tests_joins.py  tests_known_failures.py  tests_schema.py
uc-neo4j-test-suite/: .env.sample  .gitignore  DBX_CLUSTER_JOBS.md  METADATA_SYNC_README.md  README.md  enable_system_tables.sh  federated_lakehouse_query.ipynb  federated_views_agent_ready.ipynb  full_uc_tests.py  metadata_sync_delta.ipynb  metadata_sync_external.ipynb  neo4j_databricks_sql_translation.ipynb  neo4j_schema_test.ipynb  pyproject.toml  setup.sh
uc-neo4j-test-suite/error logs/: log4j-active.txt  stderr.txt  stdout.txt
uc-neo4j-test-suite/src/: __init__.py  config.py  main.py
uc-neo4j-test-suite/src/tests/: __init__.py  base.py  direct_jdbc.py  environment.py  neo4j_driver.py  network.py  schema_sync.py  spark_connector.py  unity_catalog.py
(+168 files in other folders)
