[project]
name = "uc-neo4j-test-suite"
version = "0.1.0"
description = "Unity Catalog Neo4j JDBC Connection Test Suite for Databricks"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
